# truss

./: .env.example  .env.production  .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  docker-compose.yml  index.html  package-lock.json  package.json  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: main.py
app/core/: auth.py  config.py  logging.py  redis.py  storage.py
app/schemas/: dataset.py  job.py  model.py  preprocessing.py  project.py  session.py
app/services/: db.py  ml_pipeline.py  models.py  session_store.py
app/utils/: json_sanitize.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_project_size_bytes.py
backend/app/: main.py
backend/app/api/routes/: auth.py  dataset.py  model.py  projects.py
backend/app/core/: config.py  limiter.py  storage.py
backend/app/schemas/: auth.py  model.py  project.py
backend/app/services/: models.py  quotas.py
backend/app/utils/: uuid_helpers.py
backend/tests/: conftest.py  test_auth_utils.py  test_json_sanitize.py  test_ml_preprocessing.py  test_quotas.py  test_schemas.py  test_uuid_helpers.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  eslint.config.js  package-lock.json  package.json
frontend/src/: App.tsx  index.css
src/: App.tsx  main.tsx  types.ts
src/components/: CreateProjectModal.tsx  DataTable.tsx  FileUpload.tsx  InfoTip.tsx  Logo.tsx  (+7 more)
(+103 files in other folders)
