[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "truss-backend"
version = "0.1.0"
description = "Truss ML Platform - Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.0",
    "python-multipart>=0.0.21",

    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.31.0",
    "psycopg>=3.3.0",

    # Auth & Security
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",

    # Caching
    "redis[asyncio]>=5.0.0",

    # HTTP
    "requests>=2.31.0",

    # ML / Data
    "numpy>=2.4.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "joblib>=1.5.0",
    "PyYAML>=6.0.0",

    # Utilities
    "python-dateutil>=2.9.0",
    "pytz>=2025.0",
    "tzdata>=2025.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
